Add minimal funcion in popidze

--- a/src/template/sass/style.sass
+++ b/src/template/sass/style.sass
@@ -4,10 +4,10 @@
 @import grid
 
 @import ../components/button/button
-@import ../components/field/field
-@import ../components/check/check
-@import ../components/select/select
-@import ../components/popup/popup
+// @import ../components/field/field
+// @import ../components/check/check
+// @import ../components/select/select
+// @import ../components/popup/popup
 // @import ../components/tabs/tabs
 // @import ../components/popup/popup
 // @import ../components/slider/slider
@@ -17,3 +17,10 @@
 
 .overflow-disable
 	overflow: hidden
+
+.popup
+	display: none
+	width: 100%
+	max-width: 400px
+	height: 900px
+	background-color: #fff
